fixing horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@ body {
   box-sizing: border-box; }
 
 body {
+  overflow-x: hidden; }
+
+body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   line-height: 1.7;
